Fix card accordion Safari

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -140,12 +140,12 @@ div.card > img {
 
   div.card {
     width: 100%;
-    max-height: 100px;
+    height: 100px;
   }
 
   div.card.active {
     width: 100%;
-    max-height: 450px;
+    height: 450px;
   }
 
   div.card.active .main-name {
